// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros parse invalid input 1`] = `
.emotion-2 {
  overflow: hidden;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  border: none;
  outline: none;
}

.emotion-0 {
  width: 100%;
  height: 0;
  background: transparent;
  padding-bottom: 80%;
}

.emotion-1 {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  -webkit-filter: initial;
  filter: initial;
  -webkit-transition: initial;
  transition: initial;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <img
    alt="Test image"
    className="emotion-1"
    src="image2.jpg"
    srcSet={null}
  />
</div>
`;

exports[`macros parse valid input 1`] = `
.emotion-2 {
  overflow: hidden;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  border: none;
  outline: none;
}

.emotion-0 {
  width: 100%;
  height: 0;
  background: transparent;
  padding-bottom: 80%;
}

.emotion-1 {
  display: block;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  -webkit-filter: initial;
  filter: initial;
  -webkit-transition: initial;
  transition: initial;
  -webkit-transform: initial;
  -ms-transform: initial;
  transform: initial;
}

<div
  className="emotion-2"
>
  <div
    className="emotion-0"
  />
  <img
    alt="Test image"
    className="emotion-1"
    src="image.jpg"
    srcSet={null}
  />
</div>
`;
